--- a/.gitignore
+++ b/.gitignore
@@ -64,3 +64,11 @@ node_modules/
 
 # dotenv environment variables file
 .env
+### Example user template template
+### Example user template
+
+# IntelliJ project files
+.idea
+*.iml
+out
+gen
